Migrate to Java 21 and organize imports
Replaced deprecated `get(0)` calls with `getFirst()`, sorted all imports, and updated Maven compiler configuration for modern Java standards.